# QuickContour

./: CMakeLists.txt  qcMainWindow.cxx  qcMainWindow.h  qcMainWindow.ui
